[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "supportbench"
version = "0.1.0"
description = "OpenEnv-style customer support triage benchmark."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.12",
  "openenv-core>=0.2.0",
  "openai>=1.75.0",
  "pydantic>=2.11.3",
  "uvicorn>=0.34.1",
  "PyYAML==6.0.2",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
include = ["supportbench*"]
